forums-hader alignment bug fix

--- a/sass/forums.sass
+++ b/sass/forums.sass
@@ -141,6 +141,16 @@ main
 			margin-right: 0.7em
 			font-size: 0.8rem
 
+@media only screen and (max-width: 600px)
+	.forums-header
+		flex-direction: column
+		justify-content: flex-start !important
+		align-items: flex-start !important
+
+		a
+			margin-top: 1em
+
+
 @media only screen and (max-width: 425px)
 	.more-posts
 		display: flex
